--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <title>Countdown Timer</title>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="icon" href="/img/nyantocat.ico" type="image/x-icon">
 </head>
 <body>
 
